--- a/src/app/udupi/aboutus/aboutus.component.html
+++ b/src/app/udupi/aboutus/aboutus.component.html
@@ -1,3 +1,33 @@
-<p>
-  aboutus works!
-</p>
+<div class="container-fluid"> 
+<!-- <img src="../../../assets/img/img1.jpg"> -->
+<div class="row" *ngFor="let col of data">
+    <img  src="{{col.banner_img}}" style="width: 100%;height:600px;" alt="img">
+        <div class="row">
+            <div class="col-sm-1"></div>
+                <div class="col-sm-5" id="txt" style="width: 100%;"><h3>{{col.name}}</h3><br><p>{{col.desc1}}</p></div>
+                <div class="col-sm-5" id="map" ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15551.98046151675!2d77.6305730710415!3d12.972164006388883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16a6151f8087%3A0x882b02975044e035!2sBank+Of+Baroda!5e0!3m2!1sen!2sin!4v1548139195199" width="500" height="350" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+                <div class="col-sm-1"></div>
+        </div>
+    
+        <div class="col-sm-12" style="text-align: center;padding-top: 0%;"><h3>Rest of card details</h3></div>
+        <div class="row" *ngFor="let col1 of data1">
+                <div class="row" ng-if="col.id != col1.id">
+                        <div class="card" style="width: 18rem; margin-left:10%; margin-top:6%;">
+                          <img class="card-img-top" src="{{col1.image}}" style="height: 18rem;" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">{{col1.name}}</h5>
+                            <p class="card-text">{{col1.descr}}</p>
+                            
+                          </div>
+                          </div>
+                        </div>
+
+
+        </div>        
+                
+            
+</div>
+</div>
+    <!-- "localhost\udupi\img" -->
+
+    
