--- a/src/app/udupi/contact/contact.component.html
+++ b/src/app/udupi/contact/contact.component.html
@@ -1,3 +1,25 @@
-<p>
-  contact works!
-</p>
+
+<div class="container">
+    <h2 style="text-align: center;">Contact Us</h2>
+    <form action="/action_page.php">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+      </div>
+      
+      <div class="form-group">
+        <label for="phone">Phone:</label>
+        <input type="phone" class="form-control" id="phone" placeholder="Enter phone no" name="phone">
+      </div>
+      
+      <div class="form-group">
+        <label for="message">Message:</label>
+        <textarea class="form-control" rows="5" id="message" placeholder="message"></textarea>
+      </div><button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
+  
