--- a/src/app/udupi/home/home.component.html
+++ b/src/app/udupi/home/home.component.html
@@ -7,6 +7,9 @@
         <p class="card-text">{{col.descr}}</p>
         
       </div>
+      <div class="more info">
+        <button (click)="more(col.id)">More Info....</button>
+      </div>
     </div>
     </div>
 
